--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,7 +5,7 @@
   <nav>
     <ul>
       <li><%= link_to "About",   '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
+      <li><%= link_to "Contact", 'mailto:info@aiddata.org' %></li>
       <li><a href="http://blog.aiddata.org/">Blog</a></li>
     </ul>
   </nav>
