--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,18 @@
                   <% if signed_in? %>
                   
                     <% # Links for signed-in users %>
+                    <li id="fat-menu" class="dropdown">
+                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                       Projects <b class="caret"></b>
+                       </a>
+                      
+                      <ul class="dropdown-menu">
+                        <li><%= link_to "Create new project", new_project_path %></li>
+                        <li><%= link_to_function "Find by ID", 'get_project_id_for_search()' %></li>
+                        <li><%= link_to "List all", projects_path %></li>
+                      </ul>
+
+                 </li>
                     <li><%= link_to "Users", '#' %></li>
                     <li id="fat-menu" class="dropdown">
                        
