--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, @user.name) %>
 
-<%= @user.name %>, <%= @user.email %>
+<%= @user.name %>, <%= @user.email %> <br>
+Owner: <%= @user.owner.nil? ? 'None' : @user.owner.name %>
