Better sample data

--- a/app/views/shared/code.html.erb
+++ b/app/views/shared/code.html.erb
@@ -3,5 +3,5 @@
 <% object.attributes.each_pair do |k, v| %>
 <p class='span12'><b><%= k.capitalize %>:</b> <%= v.to_s %> </p>
 <% end %>
-<p class='span12'> Referenced by <b><%= object.projects.count %> projects</b>. </p>
+<p class='span12'> Referenced by <b><%= pluralize(object.projects.count, "project") %></b>. </p>
 <p><%= link_to "See All #{type.pluralize}", "/#{type.pluralize.downcase}" %></p>
