--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -1,15 +1,26 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
+
+  <h1>
   <%= @organization.name %>
-</p>
+  </h1>
 
 <p>
   <b>Description:</b>
   <%= @organization.description %>
 </p>
 
+<p>
+  <b>Type:</b>
+  <%= @organization.organization_type.name%>
+</p>
+
+<p>
+	Participating in 
+  <b>
+  <%= pluralize(@organization.projects.count, "project") %>. 
+  </b>
+</p>
 
 <%= link_to 'Edit', edit_organization_path(@organization) %> |
 <%= link_to 'Back', organizations_path %>
