--- a/app/views/projects/_source_fields.html.erb
+++ b/app/views/projects/_source_fields.html.erb
@@ -2,7 +2,7 @@
 	<%= f.input :url %>
 	<%= f.association :source_type %>
 	<%= f.association :document_type %>
-	<%= f.input :date %>
+	<%= f.input :date, include_blank: true, input_html: {value: '' }, use_short_month: true %>
 	<p>
 		<i><%= link_to_remove_fields "Remove Source", f %></i>
 	</p>
