--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,3 +1,4 @@
-<% provide(:title, "Update " + @project.title) %>
-<h1> Update: </h1>
+<% provide(:title, "Edit " + @project.title) %>
+<% provide(:first_header, "Edit " + @project.title) %>
+
 <%= render 'project_form' %>
