--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
 <% provide(:title, 'Home') %>
+<% provide(:first_header, "Chinese Development Finance") %>
 
-<h1>AidData MBDC</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<%= render 'static_pages/map_js' %>
