--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,22 +10,12 @@
           <nav>
             <ul class="nav pull-right">
                   <li><%= link_to "Home", root_path %> </li>
-                  <% if signed_in? %>
+                  <%= render 'layouts/project_menu' %>
                   
+                  <% if signed_in? %>
                     <% # Links for signed-in users %>
-                    <li id="fat-menu" class="dropdown">
-                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                       Projects <b class="caret"></b>
-                       </a>
-                      
-                      <ul class="dropdown-menu">
-                        <li><%= link_to "Create new project", new_project_path %></li>
-                        <li><%= link_to_function "Find by ID", 'get_project_id_for_search()' %></li>
-                        <li><%= link_to "List all", projects_path %></li>
-                      </ul>
 
-                 </li>
-                 <li id="fat-menu" class="dropdown">
+                    <li id="fat-menu" class="dropdown">
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                        Config <b class="caret"></b>
                        </a>
@@ -34,12 +24,21 @@
                         <li><%= link_to "Countries", countries_path %></li>
                         <li><%= link_to "Organizations", organizations_path %></li>
                         <li class="divider"></li>
+                        <li><b>Codes:</b></li>
                         <li><%= link_to "Statuses", statuses_path %></li>
                         <li><%= link_to "Sectors", sectors_path %></li>
                         <li><%= link_to "ODA-Likes", oda_likes_path %></li>
                         <li><%= link_to "Tieds", tieds_path %></li>
                         <li><%= link_to "Flow Types", flow_types_path %></li>
                         <li><%= link_to "Verifieds", verifieds_path %></li>
+                        <li><%= link_to "Source Types", source_types_path %></li>
+                        <li><%= link_to "Document Types", document_types_path %></li>
+                        <li><%= link_to "Currencies", currencies_path %></li>
+                        <li><%= link_to "Org. Origins", origins_path %></li>
+                        <li><%= link_to "Org. Types", organization_types_path %></li>
+                        <li><%= link_to "Org. Roles", roles_path %></li>
+
+
                       </ul>
 
                  </li>
@@ -47,7 +46,7 @@
                     <li id="fat-menu" class="dropdown">
                        
                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                          Account <b class="caret"></b>
+                          Users <b class="caret"></b>
                        </a>
                       <ul class="dropdown-menu">
                         <li><%= link_to "My Profile", current_user %></li>
@@ -69,6 +68,13 @@
                   <% end %>
             </ul>
           </nav>
+
         </div>
       </div>
     </header>
+<div>
+<%= image_tag "aiddata_background.jpg", id: "background-image"%>
+<h1 id="first_header"> <%= yield(:first_header) %></h1>
+</div>
+<br>
+
