--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <link rel="shortcut icon" href="/favicon.ico" />
 <title>AidData | <%= yield(:title) %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag   "application"%>
+  <%= javascript_include_tag   "application" %>
   <%= csrf_meta_tags %>
       <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -14,7 +14,7 @@
     <%= render 'layouts/header' %>
 
     <% flash.each do |key, value| %>
-        <div class="alert alert-<%= key %>"><%= value %></div>
+        <div class="alert alert-<%= key %>"><%= raw(value) %></div>
     <% end %>
 
     <div class="container">
