--- a/app/views/organizations/new.html.erb
+++ b/app/views/organizations/new.html.erb
@@ -1,4 +1,5 @@
-<h1>New organization</h1>
+<% provide(:first_header, "New Organization") %>
+<% provide(:title, "New Organization")
 
 <%= render 'form' %>
 
