--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,21 +1,94 @@
-<% provide(:title, "View Projects") %>
-<h1>All projects</h1>
+<% provide(:title, "Projects") %>
+<% provide(:first_header, "View Projects") %>
+<% current_url = "#{request.protocol}#{request.host_with_port}#{request.fullpath}".gsub(/\??page=\d+&*/, '') %>
+<% joiner = current_url.index("?") ? "&" : "?" %>
 
 <%= form_tag projects_path, method: :get do %>
 	<p>
-		<%= text_field_tag :search, params[:search] %>
-		<%= submit_tag, "Search", name: nil %>
+		<%= submit_tag "Search", name: nil, class: "btn" %>
+		<%= text_field_tag :search, params[:search], class: "span7" %>
 	</p>
 <% end %>
 
-<%= will_paginate %>
+<div id='project-facets'>	
+	<h3>Sectors</h3>
+	<ul>
+		<% for row in @search.facet(:sector_name).rows %>
+			<li>
+				<% if params[:sector_name].blank? %>
+					<%= link_to row.value, "#{current_url}#{joiner}sector_name=#{row.value}" %> (<%= row.count %>)
+				<% else %>
+					<b><%= row.value %></b> (<%= link_to "remove", "#{current_url.gsub(/sector_name=[^&]+&?/, '')}" %>) 
+				<% end %>
+			</li>
+		<% end %>
+	</ul>
+	<h3>Flow Type</h3>
+	<ul>
+		<% for row in @search.facet(:flow_type_name).rows %>
+			<li>
+				<% if params[:flow_type_name].blank? %>
+					<%= link_to row.value, "#{current_url}#{joiner}flow_type_name=#{row.value}" %> (<%= row.count %>)
+				<% else %>
+					<b><%= row.value %></b> (<%= link_to "remove", "#{current_url.gsub(/flow_type_name=[^&]+&?/, '')}"%>) 
+				<% end %>
+			</li>
+		<% end %>
+	</ul>	
+	<h3>Flow Class</h3>
+	<ul>
+		<% for row in @search.facet(:oda_like_name).rows %>
+			<li>
+				<% if params[:oda_like_name].blank? %>
+					<%= link_to row.value, "#{current_url}#{joiner}oda_like_name=#{row.value}" %> (<%= row.count %>)
+				<% else %>
+					<b><%= row.value %></b> (<%= link_to "remove", "#{current_url.gsub(/oda_like_name=[^&]+&?/, '')}"%>) 
+				<% end %>
+			</li>
+		<% end %>
+	</ul>
 
-<ul class="projects">
+</div>
+	
+<h3>Projects:</h3>
 
-    <% @projects.each do |project| %>
-    <li><%= link_to project.title, project_path(project) %> (<%= project.owner.nil? ? 'No owner' : project.owner.name %>) </li>
-    <% end %>
+<%= will_paginate @projects %>
+<table class="projects">
+	<thead>
+		<tr>
+			<th>Donor</th>
+			<th>Title</th>
+			<th>Year</th>
+			<th>Recipients</th>
+			<th>Amount (USD-2009)</th>
+			<% if current_user %>
+				<th>Links</th>
+			<% end %>
+		</tr>
+	</thead>
+	<tbody>
+	    <% @projects.each do |p| %>
+	    	<tr>
+	    		<td><%= p.donor ? p.donor.name : 'Unset' %> </td>
+	    		<td><%= link_to p.title, p %></td> 
+	    		<td><%= p.year %></td>
+	    		<td><%= p.recipient_country.join(', ') %></td>
+	    		<td><%= p.usd_2009 %></td>
+	    		<% if current_user && current_user.owner %>
+		    		<td>
+		    			<% if p.owner %>
+	    					Owner: <%= link_to p.owner.name, p.owner %> |
+	    					<% if p.owner == current_user.owner %>
+	    						<%= link_to "Edit", edit_project_path(p) %>
+	    					<% end %>
+	    				<% else %>
+	    					No owner 
+	    				<% end %>
 
-<%= will_paginate %>
-
-</ul>
+	    			</td>
+	    		<% end %>
+	    	</tr>
+	    <% end %>
+	</tbody>
+</table>
+<%= will_paginate @projects %>
