--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,3 +1,4 @@
 <% provide(:title, "New Project") %>
-<h1> Create a new project </h1>
+<% provide(:first_header, "New Project") %>
+
 <%= render 'project_form' %>
