--- a/app/views/shared/code.html.erb
+++ b/app/views/shared/code.html.erb
@@ -1,7 +1,18 @@
 <% provide(:title, "#{type}: #{object.name}") %>
-<h1><%= type %>: <%= object.name %> </h1>
+<% provide(:first_header, "#{type}: #{object.name}") %>
+
+<% hidden_attributes = ["created_at", "updated_at", "id"] %>
+
 <% object.attributes.each_pair do |k, v| %>
-<p class='span12'><b><%= k.capitalize %>:</b> <%= v.to_s %> </p>
+	<% if !hidden_attributes.include?(k) %>
+		<p class='span12'><b><%= k.gsub(/_/, ' ').capitalize %>:</b> <%= v.to_s %> </p>
+	<% end %>
 <% end %>
-<p class='span12'> Referenced by <b><%= pluralize(object.projects.count, "project") %></b>. </p>
-<p><%= link_to "See All #{type.pluralize}", "/#{type.pluralize.downcase}" %></p>
+<p class='span12'> Referenced by <b><%= link_to pluralize(object.projects.count, "project"), "/projects?#{type.downcase.gsub(/\s/, '_')}_name=#{object.name.gsub(/\s/, '+')}" %></b>. </p>
+<p>
+	<% if current_user.present? && current_user.admin? %>
+		<%= link_to "Edit", "/#{type.pluralize.downcase.gsub(/\s/, '_')}/#{object.id}/edit" %> |
+	<% end %> 
+	
+	<%= link_to "See All #{type.pluralize}", "/#{type.pluralize.downcase.gsub(/\s/, '_')}" %>
+</p>
