Added comments, vis is working but needs data loaded. Finished Paper Trail, although output could use some work

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -47,9 +47,8 @@
         </div>
       </div>
     </header>
-<div>
+<div class='row' id='image_and_header'>
 <%= image_tag "aiddata_background.jpg", id: "background-image"%>
 <h1 id="first_header"> <%= yield(:first_header) %></h1>
 </div>
-<br>
 
