--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -12,10 +12,6 @@ $grayMediumLight: #eaeaea;
 
 /* universal */
 
-img {
-  max-height:100%;
-}
-
 
 html {
   overflow-y: scroll;
@@ -79,32 +75,35 @@ p {
   color: #fff;
   text-transform: uppercase;
   letter-spacing: -1px;
-  padding-top: 9px;
+  padding-top: 0px;
   font-weight: bold;
   line-height: 1;
-    &:hover {
-  color: #fff;
-  text-decoration: none;
-  }
     img {
     height:80px;
     }
 }
 
-#background-image {
-  width:100%;
-  height:95px!important;
-  position:absolute;
-  z-index:-1;
-  left:0;
-  top:30px;
-  opacity:0.9;
-  filter:alpha(opacity=90); /* For IE8 and earlier */
-}
+#image_and_header {
+  min-height:105px;
+  position:relative;
+  top:-30px;
 
-#first_header{
-  text-shadow:1px 1px #cce;
-  color:#000;
+  #background-image {
+    vertical-align:top;
+    width:100%;
+    height:100%!important;
+    z-index:-1;
+    left:0;
+    top:0;
+    opacity:0.9;
+    filter:alpha(opacity=90); /* For IE8 and earlier */
+  }
+
+  #first_header{
+    text-shadow:1px 1px #cce;
+    color:#000;
+    margin-top:40px;
+  }
 }
 
 /* footer */
@@ -147,65 +146,22 @@ footer {
   @include box_sizing;
 }
 
+                                        /* Visualization */
+
 #africa-map {
   background: #1B3970;
 }
-/* Sidebar*/
-aside {
-  section {
-    padding: 10px 0;
-    border-top: 1px solid $grayLighter;
-    &:first-child {
-      border: 0;
-      padding-top: 0;
-    }
-    span {
-      display: block;
-      margin-bottom: 3px;
-      line-height: 1;
-    }
-    h1 { 
-      font-size: 1.6em;
-      margin-bottom: 3px;
-      line-height: 1;
-    }
+
+.overlay a {
+  color: inherit;
+  &:hover {
+    color: #ccc;
   }
 }
-
-.gravatar {
-  float: left;
-  margin-right: 10px;
+.axis line, .axis path {
+  fill:none;
+  stroke: #ccc;
 }
-
-.stats {
-  overflow: auto;
-  a {
-    float: left;
-    padding: 0 10px;
-    border-left: 1px solid $grayLighter;
-    color: gray;
-    &:first-child {
-      padding-left: 0;
-      border: 0;
-    }
-    &:hover {
-      text-decoration: none;
-      color: $blue;
-    }
-  }
-  strong {
-    display: block;
-  }
-}
-
-.user_avatars {
-  overflow: auto;
-  margin-top: 10px;
-  .gravatar {
-    margin: 1px 1px;
-  }
-}
-
 /* forms */
 
 
@@ -235,6 +191,7 @@ label {
     max-width:70px;
   }
 }
+
 #error_explanation {
   ul {
   color: #f00;
@@ -248,7 +205,7 @@ label {
   @extend .error;
 }
 
-/* Project Pages */
+                                    /* Project Pages */
 
 .project-page {
   line-height:16px;
@@ -295,16 +252,39 @@ label {
   color: #bbb;
 }
 
-/* Project Index */
-#project-search-results {
-  td, th{
-    margin: 2px 8px 4px 8px;
+.comment {
+  .comment-header {
+    margin: 2px 2px 2px 6px;
+    padding: 2px 2px 2px 6px;
   }
+  .comment-content {
+    margin: 2px 2px 10px 20px;
+    padding: 2px 2px 2px 16px;
+    border-left: 3px solid #ccc;
+  }
+
+}
+
+                                        /* Project Index */
+#project-search-results {
+  th {
+  margin: 2px 8px 4px 8px;
+  padding: 2px 3px 2px 3px; 
+  border-left: 1px solid #ddd;
+
+  }
+
   td {
+  border-left: 1px solid #ddd;
+  margin: 2px 8px 4px 8px;
   max-width:500px;
-  padding: 2px 0 2px 0; 
+  padding: 2px 3px 2px 3px; 
   border-top: 1px solid #999;
   }
+}
+.pagination {
+  vertical-align:center;
+  text-align:center;
 }
 #project-facets  {
     border: 1px solid #333;
