--- a/app/views/organizations/index.html.erb
+++ b/app/views/organizations/index.html.erb
@@ -1,27 +1,33 @@
 <% provide(:first_header, "All Organizations") %>
 <% provide(:title, "Organizations") %>
 
-<%= link_to 'New Organization', new_organization_path %>
-<table>
+  <% if current_user && current_user.owner==Organization.find_by_name("AidData") %>
+    <%= link_to 'New Organization', new_organization_path %>
+  <% end %>
+
+<table class='code-table'>
   <tr>
     <th>Name</th>
     <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
+    <th>Links</th>
+
   </tr>
 
 <% @organizations.each do |organization| %>
   <tr>
     <td><%= organization.name %></td>
     <td><%= organization.description %></td>
-    <td><%= link_to 'Show', organization %></td>
-    <td><%= link_to 'Edit', edit_organization_path(organization) %></td>
-    <td><%= link_to 'Destroy', organization, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'View', organization %>
+      <% if current_user && current_user.owner == Organization.find_by_name("AidData") %>
+         | <%= link_to 'Edit', edit_organization_path(organization) %>
+      <% end %>
+    </td>
   </tr>
 <% end %>
 </table>
 
 <br />
+  <% if current_user && current_user.owner==Organization.find_by_name("AidData") %>
+    <%= link_to 'New Organization', new_organization_path %>
+  <% end %>
 
-<%= link_to 'New Organization', new_organization_path %>
