--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,8 +1,11 @@
 <% provide(:title, 'Home') %>
 <% provide(:first_header, "Chinese Development Finance") %>
-
-<%= render 'static_pages/map_js' %>
-
-<div id='activity-feed' >
-<%= render 'shared/feed' %>
+<div class="row">
+	<h2>Visualize</h2>
+	<%= render 'static_pages/map_js' %>
+</div>
+<div id='activity-feed' class="row">
+	<h2>Recent Activity</h2>
+	<%= render 'shared/feed' %>
+	<%= link_to "See All Recent Activity...", versions_path %>
 </div>
