--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,9 +14,11 @@
 	</p>
 </section>
 <section>
+	<!--
 	<% if signed_in? %>
 		<%= render partial: 'shared/follow_form', locals: {object: @user} %>
 	<% end %>
+	!-->
 </section>
 </div>
 <div class="row">
@@ -25,38 +27,12 @@
 </div>
 <div class="row">
 <p><b>Most recent activity:</b> </p>
-<table class="code-table">
-	<thead>
-		<th>Action</th>
-		<th>Object Type</th>
-		<th>Object Name</th>
-		<th>Date/Time</th>
-	</thead>
-	<tbody>
+<% if current_user %>
+	<% cutoff = @feed.length > 30 ? -30 : 0
+	active_feed = @feed.sort!{ |a,b| a[:created_at] <=> b[:created_at]}[cutoff..-1].reverse	%>
+	<%= render partial: 'shared/generate_feed_items', locals: {feed: active_feed} %>
+<% else %>
+	<p> <%= link_to "Sign in", signin_path %> or <%= link_to "sign up", signup_path %> to see recent activity.</p>
+<% end %>
 
-		<% i = 0 %>
-		<% while (i < 25 && @user.actions[i]) %>
-			<% this_action = @user.actions.order("created_at desc")[i] %>
-			<% i+=1 %>
-			<tr>
-				<td><%= this_action.event.capitalize %> </td>
-				<td>
-					<%= this_action.item_type %>
-				</td>
-				<td>
-					<% if this_action.item_type.constantize.find_by_id(this_action.item_id).present? %>
-
-					<% link_text = this_action.item_type == "Project" ? this_action.item_type.constantize.find_by_id(this_action.item_id).title : this_action.item_type.constantize.find_by_id(this_action.item_id).name %>
-
-						<%= link_to("#{link_text}", this_action.item_type.constantize.find_by_id(this_action.item_id)) %>
-					<% else %>
-						<i>Deleted</i>
-					<% end %>
-
-				</td>
-				<td><%= this_action.created_at.strftime("%l:%M%P, %d %B %Y") %></td>
-			</tr>
-		<% end %>
-	</tbody>
-</table>
 </div>
