--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -66,7 +66,7 @@ p {
 }
 
 
-/* header */
+                                                                        /* header */
 
 #logo {
   float: left;
@@ -84,14 +84,14 @@ p {
 }
 
 #image_and_header {
-  min-height:105px;
+  max-height:150px;
   position:relative;
   top:-30px;
-
+  
   #background-image {
     vertical-align:top;
     width:100%;
-    height:100%!important;
+    height:140px;
     z-index:-1;
     left:0;
     top:0;
@@ -100,9 +100,11 @@ p {
   }
 
   #first_header{
+    position:relative;
     text-shadow:1px 1px #cce;
     color:#000;
-    margin-top:40px;
+    top:-80px;
+    z-index:5;
   }
 }
 
