--- a/app/views/projects/_project_form.html.erb
+++ b/app/views/projects/_project_form.html.erb
@@ -27,6 +27,7 @@
 	<br>
 	<%= f.input :is_commercial, wrapper_html: {class: " span5"} %>
 	<%= f.input :line_of_credit,wrapper_html: {class: " span3"}, hint: "Is this project a line of credit?" %>
+	<%= f.input :is_cofinanced,wrapper_html: {class: " span3"} %>
 	<%= f.input :debt_uncertain, wrapper_html: {class: "span4"} %>
 	<%= f.association :tied, wrapper_html: {class: " span5"} %>
 	<%= f.association :flow_type, wrapper_html: {class: " span5"} %>
